# test-mmd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
cmake/: BuildConfig.cmake
include/: BasicFormatter.hpp  Common.hpp  FileDataWriter.hpp  FormatWorker.hpp  Params.hpp  UdpServer.hpp
scripts/: makefile  test_ascii.txt  test_utf8.txt
src/: main.cpp
test/: BasicFormatter_test.cpp  syncronization_test.cpp
